<resources>
    <string name="app_name">GithubUser</string>
    <string name="search">Search</string>
    <string name="favorite">Favorite</string>
    <string name="share">Share</string>
    <string name="setting">Setting</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="search_hint">Masukan username</string>
    <string name="followers">%1$s Followers</string>
    <string name="following">%1$s Following</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>